# machine-learning-in-c

./: .clang-format  .gitignore  .gitmodules  LICENSE  LICENSE.md  Makefile.am  README.md  autoremove.sh  compile_commands.json  configure.ac  makefile
script/: autogen.sh  autoremove.sh
src/: Makefile.am  config.c  config.h  custom_math.c  custom_math.h  data.c  data.h  debug.c  debug.h  gradient_descent.c  io.c  io.h  main.c  simple_json.c  simple_json.h  utils.c  utils.h
src/algorithms/: gradient_descent.c  gradient_descent.h
test/: test.c  test_config.h  test_gd.c  test_gd.h  test_io.c  test_io.h  test_math.c  test_math.h
tests/: Makefile.am  test.c  test_config.h  test_data.c  test_data.h  test_io.c  test_io.h  test_math.c  test_math.h  test_utils.c  test_utils.h
