bin_PROGRAMS = mlalgos
mlalgos_SOURCES = \
    main.c \
    io.c io.h \
    data.c data.h \
    custom_math.c custom_math.h \
    utils.c utils.h \
		gradient_descent.c gradient_descent.h \
    config.h

# Add any additional flags here
AM_CFLAGS = -Wall -Wextra -I. -std=c89 -lcsv

# Install headers
noinst_HEADERS = \
    io.h \
    data.h \
    custom_math.h \
    debug.h \
    utils.h \
		gradient_descent.h \
    config.h

