noinst_PROGRAMS = mlalgos

# Only list .h files so that they get distributed
mlalgos_SOURCES = main.c io.c io.h data.c data.h custom_math.c custom_math.h utils.c utils.h gradient_descent.c gradient_descent.h

# Additional compiler flags
# Can add mlalgos_CFLAGS to be more specific
AM_CFLAGS = -Wall -Wextra -std=c89

# Check if AM_LDFLAGS = -lcsv is needed
# mlalgos_LDADD = -lcsv
