TESTS = test
check_PROGRAMS = test
noinst_LTLIBRARIES = libtestio.la libtestmath.la libtestdata.la libtestutils.la
libtestio_la_SOURCES = test_io.c test_io.h
libtestmath_la_SOURCES = test_math.c test_math.h
libtestdata_la_SOURCES = test_data.c test_data.h
libtestutils_la_SOURCES = test_utils.c test_utils.h
test_SOURCES = test.c test_io.h test_math.h test_data.h test_utils.h
#test_prg_CFLAGS = @CHECK_CFLAGS@ -I$(srcdir)/../src
AM_CFLAGS = @CHECK_CFLAGS@ -I$(srcdir)/../src
#libtestdata_la_LIBADD = $(top_builddir)/src/libio.la $(top_builddir)/src/libdata.la $(top_builddir)/src/libmath.la $(top_builddir)/src/libutils.la
#libtestio_la_LIBADD = $(top_builddir)/src/libio.la $(top_builddir)/src/libdata.la $(top_builddir)/src/libmath.la $(top_builddir)/src/libutils.la
#libtestmath_la_LIBADD = $(top_builddir)/src/libio.la $(top_builddir)/src/libdata.la $(top_builddir)/src/libmath.la $(top_builddir)/src/libutils.la
test_LDADD = @CHECK_LIBS@ $(top_builddir)/src/libio.la $(top_builddir)/src/libdata.la $(top_builddir)/src/libmath.la $(top_builddir)/src/libutils.la libtestio.la libtestmath.la libtestdata.la libtestutils.la
